<resources>
    <string name="app_name">Enroll</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="logo">App Logo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="iAmText">I am</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_course">Create Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_id">Course ID</string>
    <string name="original_course_id">Original Course ID</string>
    <string name="original_course_name">Original Course Name</string>
    <string name="new_course_id">New Course ID</string>
    <string name="new_course_name">New Course Name</string>
    <string name="remove_yourself_from_course">Remove Yourself From Course</string>
    <string name="edit_your_courses">Edit Your Courses</string>
    <string name="find_course">Find Course</string>
    <string name="hello_instructor">Hello Instructor!</string>
    <string name="assign_yourself_to_course">Assign Yourself To Course</string>
    <string name="choose_course_days_and_time_slots">Choose Course Days and Time Slots</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="update_course_days_times">Update Course Days/Times</string>
    <string name="course_capacity">Course Capacity</string>
    <string name="update_course_capacity">Update Course Capacity</string>
    <string name="course_description">Course Description</string>
    <string name="update_course_description">Update Course Description</string>
    <string name="hello_student">Hello Student!</string>
    <string name="enroll_in_course">Enroll in Course</string>
    <string name="unenroll_from_course">Unenroll from course</string>
    <string name="student_enrolled_courses">Hello Student! These are your enrolled courses</string>
    <string name="see_my_courses">View Enrolled Courses</string>
    <string name="search_by_days">Search By Days</string>
    <string name="back">Back</string>
    <string name="view_enrolled_students">View Enrolled Students</string>
    <string name="hello_professor_these_are_your_students">Hello Professor! These are your students.</string>
</resources>