<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/courseExplain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/choose_course_days_and_time_slots"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="92dp" />

    <TextView
        android:id="@+id/courseExplainDay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:text="@string/day_1"
        app:layout_constraintBottom_toTopOf="@+id/course_day1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseExplain1" />

    <TextView
        android:id="@+id/courseExplainDay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:text="@string/day_2"
        app:layout_constraintBottom_toTopOf="@+id/course_day2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseExplain1" />

    <Spinner
        android:id="@+id/course_day1"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="146dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/course_time1"
        app:layout_constraintEnd_toStartOf="@+id/course_day2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/course_day2"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/course_time2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/course_time1"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="194dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/update_course_times"
        app:layout_constraintEnd_toStartOf="@+id/course_time2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Spinner
        android:id="@+id/course_time2"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/update_course_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="408dp"
        android:text="@string/update_course_days_times"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseExplain1"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/course_capacity"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="267dp"
        android:ems="10"
        android:hint="@string/course_capacity"
        android:inputType="number"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/update_course_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="211dp"
        android:text="@string/update_course_capacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_capacity" />

    <EditText
        android:id="@+id/course_description"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/course_description"
        android:inputType="text"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_course_capacity"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/update_course_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="112dp"
        android:text="@string/update_course_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_description" />


</androidx.constraintlayout.widget.ConstraintLayout>