<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.AdminActivity">

    <EditText
        android:id="@+id/course_name_student"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="152dp"
        android:layout_marginRight="10dp"
        android:hint="@string/course_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="16dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_id_student"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="92dp"
        android:layout_marginRight="10dp"
        android:hint="@string/course_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/course_name_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/course_day_student"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/find_course_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/course_name_student"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_student"
        app:layout_constraintBottom_toTopOf="@+id/course_id_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/find_course_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/find_course"
        app:layout_constraintBottom_toTopOf="@id/enroll_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_instructor"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/enroll_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enroll_in_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_course_student" />

    <Button
        android:id="@+id/unenroll_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unenroll_from_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enroll_student"
        app:layout_constraintVertical_bias="0.077" />

    <ListView
        android:id="@+id/studentCourseListView"
        android:layout_width="355dp"
        android:layout_height="180dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unenroll_student"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>